--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,12 +6,33 @@
     padding: 43px 0;
 }
 
-.Header ul{
+.Header nav{
     flex-grow: 1;
+}
+
+.Header nav ul{
     display: flex;
+    justify-content: center;
+}
+
+.Header nav ul li{
+    list-style-type: none;
+}
+
+.Header nav ul li a{
+    color: var(--gray);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 0 28px;
+    transition-duration: 400ms;
+}
+
+.Header nav ul li a:hover, .Header nav ul li.active a{
+    color: var(--primary);
 }
 
 .Header img{
-    max-width: 60px;
-    border-radius: 50%;
+    max-width: 70px;
+    padding-right: 100px;
 }
